--- a/assets/adminthemes/purple-rain/admin-theme-colours-purple-rain.css
+++ b/assets/adminthemes/purple-rain/admin-theme-colours-purple-rain.css
@@ -484,3 +484,11 @@ input[type="range"]::-webkit-slider-thumb {
     background-color: #3A003A;
     color: #FF00FF;
 }
+/* Confirmation / status messages */
+.msg {
+    color: #FF00FF;
+}
+
+.alert-text {
+    color: #FF00FF;
+}
